--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 	data-animsition-out="fade-out">
 <img class="front-img" src="heart.jpg">
 	<div class="index-desc">
-	توضیحات و اینا
+<!--	توضیحات و اینا-->
 </div>
 <h1 class="page-heading">فهرست</h1>
 <hr />
